Fix visible trap tiles keeping floor background

--- a/styles.css
+++ b/styles.css
@@ -909,7 +909,6 @@ kbd {
 
 .tile.trap {
   color: transparent;
-  background-image: none;
 }
 
 .tile.trap-floor {
